--- a/index.html
+++ b/index.html
@@ -155,9 +155,11 @@
                 SkillBridgeがあなたとイノベーティブな企業を結びつけます。
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <button class="bg-yellow-400 text-gray-900 px-8 py-4 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition duration-300">
-                    <i class="fas fa-user mr-2"></i>求職者として登録
-                </button>
+                <!-- 修正後 -->
+<a href="/register.html" class="bg-yellow-400 text-gray-900 px-8 py-4 rounded-lg text-lg font-semibold hover:bg-yellow-300 inline-block text-center">
+    <i class="fas fa-user mr-2"></i>求職者として登録
+</a>
+
                 <button class="bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-white hover:text-indigo-600 transition duration-300">
                     <i class="fas fa-building mr-2"></i>企業として登録
                 </button>
