--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 SkillBridgeで、あなたの真の価値を企業に伝えましょう。
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <button class="bg-yellow-400 text-gray-900 px-10 py-4 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition duration-300">
+               <button class="bg-yellow-400 text-gray-900 px-10 py-4 rounded-lg text-lg font-semibold hover:bg-yellow-300 transition duration-300" onclick="location.href='https://skillbridge.agent-best.net/register.html'">
                     <i class="fas fa-user mr-2"></i>求職者として無料登録
                 </button>
                 <button class="bg-transparent border-2 border-white text-white px-10 py-4 rounded-lg text-lg font-semibold hover:bg-white hover:text-indigo-600 transition duration-300">
